kubernetes/k3s-prod-a/workloads/changedetection.io/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cdio
  namespace: cdio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdio
  template:
    metadata:
      labels:
        app: cdio
    spec:
      containers:
        - name: cdio
          image: docker.io/linuxserver/changedetection.io:0.49.2@sha256:bf898a4c6673bcda7f5ae2998bccdf312a8c45e2fb66f84cc6f14874374f4553
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: cdio-config
              mountPath: /config
      volumes:
        - name: cdio-config
          persistentVolumeClaim:
            claimName: cdio-config
