kubernetes/k3s-prod-a/workloads/changedetection.io/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cdio
  namespace: cdio
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: cdio
